--- a/_includes/html/ie_compatibility_mode.html
+++ b/_includes/html/ie_compatibility_mode.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     </head>
     ...
 </html>
