--- a/_includes/html_rules.html
+++ b/_includes/html_rules.html
@@ -58,10 +58,10 @@
 
 <div class="section" id="html-ie-compatibility-mode">
     <div class="col">
-        <h3>IE兼容模式</h3>
-        <p>用 <code>&lt;meta&gt;</code> 标签可以指定页面应该用什么版本的IE来渲染；</p>
-        <p>如果你想要了解更多，请点击<a href="http://stackoverflow.com/questions/6771258/whats-the-difference-if-meta-http-equiv-x-ua-compatible-content-ie-edge-e">这里</a>；</p>
-        <p>不同doctype在不同浏览器下会触发不同的渲染模式（<a href="https://hsivonen.fi/doctype/">这篇文章</a>总结的很到位）。</p>
+        <h3>移动web</h3>
+        <p>用 <code>&lt;meta&gt;</code> 标签可以指定页面的缩放比例；</p>
+        <p>如果你想要了解更多，请点击<a href="http://caibaojian.com/mobile-meta.html">这里</a>；</p>
+        <p>移动web开发具体细节参考慕课网基础视频（<a href="http://www.imooc.com/learn/494">这个视频</a>说的比较）。</p>
     </div>
     <div class="col">
         {% highlight html %}{% include html/ie_compatibility_mode.html %}{% endhighlight %}
