修改css和gulp检查配置

--- a/_includes/check.html
+++ b/_includes/check.html
@@ -99,38 +99,73 @@
 
 <div class="section" id="check-grunt">
     <div class="col">
-        <h3>grunt插件</h3>
+        <h3>gulp插件</h3>
         <ol>
             <li>
-                <p>在项目中安装grunt插件</p>
+                <p>在项目中安装gulp插件</p>
                 <ul>
-                    <li>jscs <code>npm install grunt-jscs --save-dev</code></li>
                     <li>jshint <code>npm install grunt-contrib-jshint --save-dev</code></li>
                     <li>csslint <code>npm install grunt-contrib-csslint --save-dev</code></li>
-                    <li>scss-lint <code>npm install grunt-scss-lint --save-dev</code></li>
                 </ul>
             </li>
-            <li>
-                <p>插件的配置文件</p>
-                <ul>
-                    <li>
-                        <code>JSCS</code>
-                        {% highlight javascript %}{% include check/grunt_jscs.js %}{% endhighlight %}
-                    </li>
-                    <li>
-                        <code>JSHint</code>
-                        {% highlight javascript %}{% include check/grunt_jshint.js %}{% endhighlight %}
-                    </li>
-                    <li>
-                        <code>CSSLint</code>
-                        {% highlight javascript %}{% include check/grunt_csslint.js %}{% endhighlight %}
-                    </li>
-                    <li>
-                        <code>SCSS-Lint</code>
-                        {% highlight javascript %}{% include check/grunt_scsslint.js %}{% endhighlight %}
-                    </li>
-                </ul>
-            </li>
+            <!--<li>-->
+                <!--<p>插件的配置文件</p>-->
+                <!--<ul>-->
+                    <!--<li>-->
+                        <!--<code>JSCS</code>-->
+                        <!--{% highlight javascript %}{% include check/grunt_jscs.js %}{% endhighlight %}-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<code>JSHint</code>-->
+                        <!--{% highlight javascript %}{% include check/grunt_jshint.js %}{% endhighlight %}-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<code>CSSLint</code>-->
+                        <!--{% highlight javascript %}{% include check/grunt_csslint.js %}{% endhighlight %}-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<code>SCSS-Lint</code>-->
+                        <!--{% highlight javascript %}{% include check/grunt_scsslint.js %}{% endhighlight %}-->
+                    <!--</li>-->
+                <!--</ul>-->
+            <!--</li>-->
         </ol>
     </div>
 </div>
+<!--<div class="section" id="check-grunt">-->
+    <!--<div class="col">-->
+        <!--<h3>grunt插件</h3>-->
+        <!--<ol>-->
+            <!--<li>-->
+                <!--<p>在项目中安装grunt插件</p>-->
+                <!--<ul>-->
+                    <!--<li>jscs <code>npm install grunt-jscs &#45;&#45;save-dev</code></li>-->
+                    <!--<li>jshint <code>npm install grunt-contrib-jshint &#45;&#45;save-dev</code></li>-->
+                    <!--<li>csslint <code>npm install grunt-contrib-csslint &#45;&#45;save-dev</code></li>-->
+                    <!--<li>scss-lint <code>npm install grunt-scss-lint &#45;&#45;save-dev</code></li>-->
+                <!--</ul>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<p>插件的配置文件</p>-->
+                <!--<ul>-->
+                    <!--<li>-->
+                        <!--<code>JSCS</code>-->
+                        <!--{% highlight javascript %}{% include check/grunt_jscs.js %}{% endhighlight %}-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<code>JSHint</code>-->
+                        <!--{% highlight javascript %}{% include check/grunt_jshint.js %}{% endhighlight %}-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<code>CSSLint</code>-->
+                        <!--{% highlight javascript %}{% include check/grunt_csslint.js %}{% endhighlight %}-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<code>SCSS-Lint</code>-->
+                        <!--{% highlight javascript %}{% include check/grunt_scsslint.js %}{% endhighlight %}-->
+                    <!--</li>-->
+                <!--</ul>-->
+            <!--</li>-->
+        <!--</ol>-->
+    <!--</div>-->
+<!--</div>-->
