--- a/styles/code_guide.css
+++ b/styles/code_guide.css
@@ -235,11 +235,9 @@ pre code {
 
 .masthead {
     padding: 3rem 1rem;
-
     text-align: center;
-
-    color: rgba(255,255,255,.5);
-    background-color: #2a3440;
+    color: #16A085;
+    background-color: #f78a24;
 }
 .masthead h1 {
     margin-bottom: .25rem;
