--- a/_includes/directory.html
+++ b/_includes/directory.html
@@ -20,7 +20,7 @@
             <li><a href="#html-doctype">HTML5 doctype</a></li>
             <li><a href="#html-lang">lang属性</a></li>
             <li><a href="#html-encoding">字符编码</a></li>
-            <li><a href="#html-ie-compatibility-mode">IE兼容模式</a></li>
+            <li><a href="#html-ie-compatibility-mode">移动页面设置</a></li>
             <li><a href="#html-style-script">引入CSS, JS</a></li>
             <li><a href="#html-attribute-order">属性顺序</a></li>
             <li><a href="#html-boolean-attributes">boolean属性</a></li>
@@ -76,7 +76,7 @@
         <h4><a href="#check">编辑器配置和构建检查</a></h4>
         <ul>
             <li><a href="#check-sublime3">sublime3插件</a></li>
-            <li><a href="#check-grunt">grunt插件</a></li>
+            <li><a href="#check-grunt">gulp插件</a></li>
         </ul>
     </div>
 </div>
