注释掉gulp插件

--- a/_includes/check.html
+++ b/_includes/check.html
@@ -104,8 +104,8 @@
             <li>
                 <p>在项目中安装gulp插件</p>
                 <ul>
-                    <li>jshint <code>npm install grunt-contrib-jshint --save-dev</code></li>
-                    <li>csslint <code>npm install grunt-contrib-csslint --save-dev</code></li>
+                    <li>jshint <!--<code>npm install grunt-contrib-jshint &#45;&#45;save-dev</code>--></li>
+                    <li>csslint <!--<code>npm install grunt-contrib-csslint &#45;&#45;save-dev</code>--></li>
                 </ul>
             </li>
             <!--<li>-->
