--- a/_includes/directory.html
+++ b/_includes/directory.html
@@ -4,6 +4,16 @@
 
 <div class="section toc">
     <div class="col">
+        <h4><a href="#mobileWeb">移动web开发注意事项</a></h4>
+        <ul>
+            <li><a href="#project-naming">页面模板</a></li>
+            <li><a href="#folder-naming">设置viewport等meta标签</a></li>
+            <li><a href="#js-naming">安全策略设置</a></li>
+            <li><a href="#css-naming">设置ico</a></li>
+            <li><a href="#html-naming">HTML文件命名</a></li>
+        </ul>
+    </div>
+    <div class="col">
         <h4><a href="#naming">命名规则</a></h4>
         <ul>
             <li><a href="#project-naming">项目命名</a></li>
