--- a/_includes/directory.html
+++ b/_includes/directory.html
@@ -4,13 +4,14 @@
 
 <div class="section toc">
     <div class="col">
-        <h4><a href="#mobileWeb">移动web开发注意事项</a></h4>
+        <h4><a href="#mobileWeb">移动web开发基础</a></h4>
         <ul>
-            <li><a href="#project-naming">页面模板</a></li>
-            <li><a href="#folder-naming">设置viewport等meta标签</a></li>
-            <li><a href="#js-naming">安全策略设置</a></li>
-            <li><a href="#css-naming">设置ico</a></li>
-            <li><a href="#html-naming">HTML文件命名</a></li>
+            <li><a href="#px">移动页面像素</a></li>
+            <li><a href="#viewport">设置视口viewport</a></li>
+            <li><a href="#webtpl">设计移动web方案</a></li>
+            <li><a href="#layout">布局</a></li>
+            <li><a href="#style">特别的样式处理</a></li>
+            <li><a href="#interactive">终端交互优化</a></li>
         </ul>
     </div>
     <div class="col">
