--- a/_includes/mobile_web.html
+++ b/_includes/mobile_web.html
@@ -1,3 +1,68 @@
-<div class="heading" id="mobileWeb">
-    <h2>命名规则</h2>
-</div>
+<h2 id="px">移动web开发像素知识</h2>
+
+<ul><li><p>px : css逻辑像素，浏览器使用的抽象单位</p></li><li><p>dp,pt: 设备独立像素</p></li><li><p>dpr: 设备缩放比</p></li></ul>
+
+<p>计算公式： 1 px = dpr的平方 * dp</p>
+
+<ul><li>DPI: 打印机每英寸可以喷的墨汁点</li><li>PPI：屏幕上每英寸的像素数量</li></ul>
+
+<p>PPI = 根号（物理像素的长^2 + 宽^2） / 4</p>
+
+<p>PPI对应的缩放比参考
+    <img alt="image" src="http://www.fengdb.com/public/images/ppi.png"/>
+    <a href="https://github.com/omwteam/mobileweb">移动页面参考模板</a></p>
+
+<h2 id="viewport">设置视口viewport</h2>
+
+<p><a href="http://www.cnblogs.com/2050/p/3877280.html">viewport详细参考</a></p>
+
+<p><code>
+    &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0,user-scalable=no&quot;&gt;
+</code></p>
+
+<h2 id="webtpl">设计移动web方案</h2>
+
+<ul><li><p>以iphone6 640*1167宽度 320 来设计</p></li><li><p>缩放比0.5来设计 这时1px = pt</p></li></ul>
+
+<h2 id="layout">布局</h2>
+
+<ul><li><p>弹性布局 为了兼容安卓4.4以下的设备，可以使用flexbox,-webkit-box,其他最新的浏览器使用flex.</p></li><li><p>响应式布局</p><ul><li><p>媒体查询，百分比</p></li><li><p>弹性图片</p></li><li><p>重新布局，显示与隐藏</p></li><li><p>自适应性</p></li><li>多行文本溢出</li></ul></li></ul>
+
+<h2 id="style">特别样式处理</h2>
+
+<ul><li><p>一像素问题
+    使用缩放transform:scaleY(0.5)
+    <img alt="image" src="http://www.fengdb.com/public/images/onepx.png"/></p></li><li><p>使用相对单位：rem 使用html的字体的相对单位</p></li></ul>
+
+<p>设置基础值，screen.width/20 </p>
+
+<h2 id="interactive">终端交互优化</h2>
+
+<p><a href="http://www.imooc.com/article/1115">移动端web开发技巧</a></p>
+
+<p><a href="http://www.imooc.com/article/1542">常见问题及解决方法参考</a></p>
+
+<ul><li>触摸事件 单击事件 300ms延迟</li></ul>
+
+<p>使用zepto  有点透的bug</p>
+
+<p>自己模拟tap效果</p>
+
+<ul><li>开启硬件加速</li></ul>
+
+<p><code>
+    -webkit-transform:translateZ(0);
+</code></p>
+
+<ul><li>弹性滚动</li></ul>
+
+<p>局部滚动开启弹性滚动：</p>
+
+<p><code>
+    body {
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+    }
+</code></p>
+
+<ul><li>下拉刷新</li></ul>
