modify mobile web

--- a/_includes/directory.html
+++ b/_includes/directory.html
@@ -4,7 +4,7 @@
 
 <div class="section toc">
     <div class="col">
-        <h4><a href="#mobileWeb">移动web开发基础</a></h4>
+        <h4><a href="#mobileweb">移动web开发基础</a></h4>
         <ul>
             <li><a href="#px">移动页面像素</a></li>
             <li><a href="#viewport">设置视口viewport</a></li>
